--- a/src/components/File/file.css
+++ b/src/components/File/file.css
@@ -1,3 +1,12 @@
 .file {
+  position: relative;
   flex: 1;
+
+  & .file-float {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    bottom: 2px;
+    left: 2px;
+  }
 }
