Display who’s turn

--- a/src/components/Board/board.css
+++ b/src/components/Board/board.css
@@ -5,6 +5,24 @@
   background-color: #a0a0a0;
 }
 
+/*:global(.movement-leave) {
+  opacity: 1;
+
+  &:global(.movement-leave-active) {
+    opacity: 0.01;
+    transition: all 1000ms ease-in;
+  }
+}
+
+:global(.movement-enter) {
+  opacity: 0.01;
+
+  &:global(.movement-enter-active) {
+    opacity: 1;
+    transition: all 1000ms ease-in;
+  }
+}*/
+
 .rank {
   width: 100%;
   height: 50px;
