Change multiple CSS animation code into single one

--- a/src/components/File/file.css
+++ b/src/components/File/file.css
@@ -8,5 +8,11 @@
     right: 2px;
     bottom: 2px;
     left: 2px;
+
+    & img {
+      position: relative;
+      z-index: 1;
+      transition: all 0.3s linear;
+    }
   }
 }
