Transform all Chess piece components as SVG instead of IMG tag

--- a/src/components/File/file.css
+++ b/src/components/File/file.css
@@ -9,7 +9,7 @@
     bottom: 2px;
     left: 2px;
 
-    & img {
+    & svg {
       position: relative;
       z-index: 1;
       transition: all 0.3s linear;
