--- a/src/components/Pawn/pawn.css
+++ b/src/components/Pawn/pawn.css
@@ -1,4 +1,12 @@
 .pawn {
-  width: 100%;
-  height: 100%;
+  opacity: 1;
+  fill-opacity: 1;
+  fill-rule: nonzero;
+  stroke: #000000;
+  stroke-width: 1.5;
+  stroke-linecap: round;
+  stroke-linejoin: miter;
+  stroke-miterlimit: 4;
+  stroke-dasharray: none;
+  stroke-opacity: 1;
 }
