--- a/src/components/Queen/queen.css
+++ b/src/components/Queen/queen.css
@@ -1,4 +1,12 @@
 .queen {
-  width: 100%;
-  height: 100%;
+  opacity: 1;
+  fill-opacity: 1;
+  fill-rule: evenodd;
+  stroke: #000000;
+  stroke-width: 1.5;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-miterlimit: 4;
+  stroke-dasharray: none;
+  stroke-opacity: 1;
 }
