--- a/src/styles/state.css
+++ b/src/styles/state.css
@@ -10,3 +10,30 @@
   box-shadow: inset 0px 0px 0px 2px #000;
   cursor: grab;
 }
+
+/* https://css-tricks.com/snippets/css/shake-css-keyframe-animation/ */
+:global(.is-shaking) {
+  animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
