--- a/src/components/Rank/rank.css
+++ b/src/components/Rank/rank.css
@@ -1,6 +1,25 @@
 .rank {
+  position: relative;
   width: 100%;
   height: calc(100% / 8);
+
+  &:after {
+    position: absolute;
+    content: attr(data-rank);
+    top: 50%;
+    left: -15px;
+    transform: translateY(-50%);
+  }
+
+  &:last-child {
+    & span:after {
+      position: absolute;
+      content: attr(data-file);
+      left: 50%;
+      bottom: -20px;
+      transform: translateX(-50%);
+    }
+  }
 
   &:nth-child(odd) {
     & span:nth-child(odd) {
