--- a/src/components/Records/records.css
+++ b/src/components/Records/records.css
@@ -2,7 +2,6 @@
   margin: 25px 0 10px;
   background-color: #a0a0a0;
   color: #000;
-  /*min-height: 150px;*/
   max-height: 150px;
   overflow: auto;
   scroll-behavior: smooth;
@@ -13,18 +12,13 @@
   }
 
   & span {
-    & svg {
-      width: 20px;
-      height: 20px;
-      margin: 0 5px;
-    }
-
     &:first-child {
-      width: 30px;
+      width: 50px;
       text-align: center;
     }
 
     &:not(:first-child) {
+      padding-left: 20px;
       flex: 1;
     }
   }
