--- a/src/components/Records/records.css
+++ b/src/components/Records/records.css
@@ -2,21 +2,24 @@
   margin: 25px 0 0;
   background-color: #fff;
   color: #000;
-  max-height: 150px;
+  height: 150px;
   overflow: auto;
   scroll-behavior: smooth;
-  border: 1px solid #efefef;
 
   & li {
     height: 30px;
     line-height: 30px;
 
-    &:hover {
-      background-color: rgba(0, 0, 0, .1);
-    }
-
     &:not(:last-child) {
       border-bottom: 1px solid #efefef;
+    }
+
+    &:hover {
+      & span {
+        &:first-child {
+          background-color: #efefef;
+        }
+      }
     }
   }
 
@@ -26,6 +29,7 @@
       text-align: center;
       color: #aaa;
       font-style: italic;
+      border-right: 1px solid #efefef;
     }
 
     &:not(:first-child) {
@@ -35,7 +39,7 @@
 
     &:last-child {
       background-color: rgba(0, 0, 0, .7);
-      color: #fff;
+      color: #efefef;
     }
   }
 }
