--- a/src/styles/state.css
+++ b/src/styles/state.css
@@ -1,3 +1,16 @@
 :global(.is-hidden) {
-  display: none;
+  display: none !important;
+}
+
+button {
+  &:global(.is-matching) {
+    width: 50px !important;
+  }
+}
+
+:global(.is-disabled) {
+  cursor: not-allowed;
+  pointer-events: none;
+  color: #c0c0c0;
+  background-color: #fff;
 }
