--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,4 +1,10 @@
 .menu {
+  &.menu-ingame {
+    & .menu-item {
+      display: inline-block;
+    }
+  }
+
   & .menu-item {
     & button {
       width: 150px;
