Display capturable piece
- Found transformMovableAsDirection bug
- Display Pawn movable tiles incorrectly

--- a/src/styles/state.css
+++ b/src/styles/state.css
@@ -31,3 +31,8 @@ button {
   cursor: pointer;
   border: 2px solid #000;
 }
+
+:global(.is-capturable) {
+  cursor: pointer;
+  border: 2px dotted red;
+}
