--- a/src/styles/state.css
+++ b/src/styles/state.css
@@ -30,3 +30,38 @@
   cursor: pointer;
   border: 2px dotted red;
 }
+
+:global(.is-check-tile) {
+  background-color: rgba(212, 60, 56, 0.3);
+}
+
+:global(.is-check-piece) {
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
